--- a/web/smsInfo.html
+++ b/web/smsInfo.html
@@ -394,8 +394,7 @@
             <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger('click')">Add Image</button>
 
             <form class="image-upload-wrap" id="uploadForm" enctype="multipart/form-data">
-                <input id="file" type='file' name="img" class="file-upload-input" size="50" onchange="readURL(this);"
-                       accept="image/*"/>
+                <input id="file" type='file' name="img" class="file-upload-input" size="50" onchange="readURL(this);" accept="image/*"/>
                 <div class="drag-text">
                     <h3>Drag and drop a file or select add Image</h3>
                 </div>
