--- a/web/index.html
+++ b/web/index.html
@@ -28,102 +28,6 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
             <li class="li-border"><a class="mystyle-color" href="#">管理控制台</a></li>
-            <li class="dropdown li-border"><a href="#" class="dropdown-toggle mystyle-color" data-toggle="dropdown">产品与服务<span
-                    class="caret"></span></a>
-                <!----下拉框选项---->
-                <div class="dropdown-menu topbar-nav-list">
-                    <div class="topbar-nav-col">
-                        <div class="topbar-nav-item">
-                            <p class="topbar-nav-item-title">弹性计算</p>
-                            <ul>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-road"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-picture"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-gift"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="">
-                            <p class="topbar-nav-item-title">弹性计算</p>
-                            <ul>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-road"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-picture"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-gift"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-
-                    <div class="topbar-nav-col">
-                        <div class="topbar-nav-item">
-                            <p class="topbar-nav-item-title">弹性计算</p>
-                            <ul>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-road"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-picture"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-gift"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="">
-                            <p class="topbar-nav-item-title">弹性计算</p>
-                            <ul>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-road"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-picture"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                                <li><a href="#">
-                                    <span class="glyphicon glyphicon-gift"></span>
-                                    <span class="">云服务器 ECS</span>
-                                </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-
-                </div>
-            </li>
         </ul>
 
         <ul class="nav navbar-nav pull-right">
@@ -209,16 +113,16 @@
                 <!---title----->
                 <div class="info-title">
                     <div class="pull-left">
-                        <h4><strong>Administrator，</strong></h4>
+                        <h4><strong id="name"></strong></h4>
                         <p>欢迎登录管理系统！</p>
                     </div>
                     <div class="time-title pull-right">
                         <div class="year-month pull-left">
-                            <p>星期二</p>
-                            <p><span>2016</span>年8月23日</p>
+                            <p id="xq"></p>
+                            <p><span id="year"></span>年<span id="month"></span>月<span id="day"></span>日</p>
                         </div>
                         <div class="hour-minute pull-right">
-                            <strong>9:00</strong>
+                            <strong id="hour"></strong><strong>:</strong><strong id="minute"></strong>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -389,6 +293,34 @@
     </div>
 </div>
 <script type="text/javascript">
+    $(document).ready(function () {
+        var date = new Date();
+        var day_list = ['日', '一', '二', '三', '四', '五', '六'];
+        $("#xq").html("星期" + day_list[date.getDay()]);
+        $("#year").html(date.getFullYear());
+        $("#month").html(date.getMonth()+1);
+        $("#day").html(date.getDate());
+        $("#hour").html(date.getHours()>9?date.getHours().toString():'0' + date.getHours());
+        $("#minute").html(date.getMinutes()>9?date.getMinutes().toString():'0' + date.getMinutes());
+        $("#time").html(date.getTime());
+
+        $.ajax({
+            url: 'http://114.115.212.203:8001/info/',
+            type: 'GET',
+            xhrFields: {
+                withCredentials: true
+            },
+            dataType: "json",
+            success: function (returndata) {
+                $("#name").html(returndata.user.uname);
+            },
+            error: function (returndata) {
+                console.log(returndata.msg);
+            }
+        });
+    });
+</script>
+<script type="text/javascript">
     $(function () {
         /*换肤*/
         $(".dropdown .changecolor li").click(function () {
@@ -421,7 +353,7 @@
             }
             // 修改数字控制速度， slideUp(500)控制卷起速度
             $(this).next(".navContent").slideToggle(300).siblings(".navContent").slideUp(300);
-        })
+        });
         /*左侧导航栏缩进功能*/
         $(".left-main .sidebar-fold").click(function () {
 
@@ -441,7 +373,7 @@
                 $(this).parent().parent().find(".right-product").addClass("right-full");
 
             }
-        })
+        });
 
         /*左侧鼠标移入提示功能*/
         $(".sBox ul li").mouseenter(function () {
