--- a/web/newslist.html
+++ b/web/newslist.html
@@ -34,7 +34,7 @@
         <a class="navbar-brand mystyle-brand"><span class="glyphicon glyphicon-home"></span></a></div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="li-border"><a class="mystyle-color" href="#">管理控制台</a></li>
+            <li class="li-border"><a class="mystyle-color" href="/index.html">管理控制台</a></li>
         </ul>
 
         <ul class="nav navbar-nav pull-right">
