--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         <a class="navbar-brand mystyle-brand"><span class="glyphicon glyphicon-home"></span></a></div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="li-border"><a class="mystyle-color" href="#">管理控制台</a></li>
+            <li class="li-border"><a class="mystyle-color" href="/index.html">管理控制台</a></li>
         </ul>
 
         <ul class="nav navbar-nav pull-right">
@@ -61,7 +61,7 @@
             <li class="dropdown li-border"><a href="#" class="dropdown-toggle mystyle-color" data-toggle="dropdown">退出<span
                     class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="login.html">退出</a></li>
+                    <li><a id="logout">退出</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#" class="dropdown-toggle mystyle-color" data-toggle="dropdown">换肤<span
@@ -294,6 +294,22 @@
 </div>
 <script type="text/javascript">
     $(document).ready(function () {
+        $.ajax({
+            url: 'http://114.115.212.203:8001/do_login/',
+            type: 'POST',
+            data: {
+                "name": "admin",
+                "pwd": "9876543210"
+            },
+            dataType: "json",
+            success: function (returndata) {
+                console.log(returndata.msg);
+            },
+            error: function (returndata) {
+                console.log(returndata.msg);
+            }
+        });
+
         var date = new Date();
         var day_list = ['日', '一', '二', '三', '四', '五', '六'];
         $("#xq").html("星期" + day_list[date.getDay()]);
@@ -319,6 +335,24 @@
             }
         });
     });
+
+    $("#logout").click(function () {
+        console.log($.cookie("JSESSIONID"));
+        $.ajax({
+            url: 'http://114.115.212.203:8001/do_logout/',
+            type: 'GET',
+            xhrFields: {
+                withCredentials: true
+            },
+            dataType: "json",
+            success: function (returndata) {
+//                window.location.href = "/login.html"
+            },
+            error: function (returndata) {
+                console.log(returndata.msg);
+            }
+        });
+    })
 </script>
 <script type="text/javascript">
     $(function () {
