--- a/web/smsInfo.html
+++ b/web/smsInfo.html
@@ -142,7 +142,7 @@
         <a class="navbar-brand mystyle-brand"><span class="glyphicon glyphicon-home"></span></a></div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="li-border"><a class="mystyle-color" href="#">管理控制台</a></li>
+            <li class="li-border"><a class="mystyle-color" href="/index.html">管理控制台</a></li>
         </ul>
 
         <ul class="nav navbar-nav pull-right">
@@ -386,24 +386,24 @@
 </script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $.ajax({
-            url: 'http://114.115.212.203:8001/do_login/',
-            type: 'POST',
-            xhrFields: {
-                withCredentials: true
-            },
-            data: {
-                "name": "admin",
-                "pwd": "9876543210"
-            },
-            dataType: "json",
-            success: function (returndata) {
-                console.log(returndata.msg);
-            },
-            error: function (returndata) {
-                console.log(returndata.msg);
-            }
-        });
+//        $.ajax({
+//            url: 'http://114.115.212.203:8001/do_login/',
+//            type: 'POST',
+//            xhrFields: {
+//                withCredentials: true
+//            },
+//            data: {
+//                "name": "admin",
+//                "pwd": "9876543210"
+//            },
+//            dataType: "json",
+//            success: function (returndata) {
+//                console.log(returndata.msg);
+//            },
+//            error: function (returndata) {
+//                console.log(returndata.msg);
+//            }
+//        });
     });
 
     function ajaxFileUpload() {
